ingress-service/user-service-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-app
  labels:
    app: user-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service-app
  template:
    metadata:
      labels:
        app: user-service-app
    spec:
      containers:
        - name: user-service-app
          image: vietronaldo23w/user-service:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9002

---
apiVersion: v1
kind: Service
metadata:
  name: user-service-svc
spec:
  ports:
    - targetPort: 9002
      port: 80
  selector:
    app: user-service-app
